objects/Quote_Health_Indicator_Settings__c/Quote_Health_Indicator_Settings__c.object-meta.xml
<CustomObject>
    <label>Quote Health Indicator Settings</label>
    <nameField>
        <displayFormat>QHIS-{000}</displayFormat>
        <label>Quote Health Indicator Settings</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Health Indicator Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>