objects/Quote_Health_Indicator_Settings__c/fields/Additional_Discount_Min__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount_Min__c</fullName>
    <label>Additional Discount Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>