objects/Quote_Health_Indicator_Settings__c/fields/Endpoints_Max__c.field-meta.xml
<CustomField>
    <fullName>Endpoints_Max__c</fullName>
    <label>Endpoints Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>