objects/Quote_Health_Indicator_Settings__c/fields/Endpoints_Min__c.field-meta.xml
<CustomField>
    <fullName>Endpoints_Min__c</fullName>
    <label>Endpoints Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>