objects/Quote_Health_Indicator_Settings__c/fields/Flag_Color__c.field-meta.xml
<CustomField>
    <fullName>Flag_Color__c</fullName>
    <label>Flag Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>