objects/Quote_Health_Indicator_Settings__c/fields/Volume_Discount__c.field-meta.xml
<CustomField>
    <fullName>Volume_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volume Discount</label>
    <type>Checkbox</type>
</CustomField>