objects/Quote_Health_Indicator_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Endpoints_Min__c</columns>
    <columns>Endpoints_Max__c</columns>
    <columns>Additional_Discount_Min__c</columns>
    <columns>Additional_Discount_Max__c</columns>
    <columns>Volume_Discount__c</columns>
    <columns>Flag_Color__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>